<resources>
    <string name="app_name">WhatsApp</string>
    <string name="texto_digite_seu_nome">Digite seu nome</string>
    <string name="texto_11">11</string>
    <string name="texto_mais_55">+55</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_telefone_exemplo">998765432</string>
    <string name="texto_validacao">Validação</string>
    <string name="texto_sms_validacao">Você recebeu um SMG para validação do seu número,digite o código de validação abaixo:</string>
    <string name="texto_codigo_validacao">Digite o código!</string>
    <string name="texto_botao_validar">Validar</string>
</resources>
